# call_tad_cliques

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  env.yml  main.nf  nextflow.config  pyproject.toml  setup.cfg  setup.py  workflow.config  workflow.nf
.github/: dependabot.yml
.github/workflows/: black.yml  build-bedtools-dockerfile.yml  build-call-cliques-dockerfile.yml  build-docker-image.yml  build-dockerfile.yml  build-hicexplorer-dockerfile.yml  build-hictkpy-dockerfile.yml  build-nchg-dockerfile.yml  build-plotting-dockerfile.yml  build-py-utils-dockerfile.yml  build-utils-dockerfile.yml  ci.yml
call_tad_cliques/: __init__.py  __main__.py  call_cliques.py  cis.py  io.py  preprocessing.py  run_nchg.py  trans.py  version.py
config/: base.config  test.config
containers/: bedtools__v2.31.1.Dockerfile  build_dockerfile.sh  call-cliques__v1.0.0.Dockerfile  hicexplorer__v3.7.4.Dockerfile  hictkpy__v0.0.5.Dockerfile  nchg__v161fbae.Dockerfile  nchg__v5389f0d.Dockerfile  nchg__vbc29ebf.Dockerfile  nchg__vc77e3e9.Dockerfile  nchg__vcc66def.Dockerfile  nchg__vdf32141.Dockerfile  plotting__v1.0.0.Dockerfile  py-utils__v1.0.0.Dockerfile  py-utils__v1.0.1.Dockerfile  utils__v1.0.0.Dockerfile
scripts/: call_cliques.py  convert_tads_to_domains.py  map_interchrom_interactions_to_domains.py  map_intrachrom_interactions_to_domains.py  parse_assembly_gaps_json.py  run_nchg.py  test_nchg.py.bak
subworkflows/: cliques.nf  nchg.nf  samplesheet.nf  tads.nf
utils/: download_example_datasets.sh  parse_assembly_gaps_json.py
