# Copyright (C) 2022 Roberto Rossini <roberros@uio.no>
# SPDX-License-Identifier: MIT

# Adapted from https://github.com/dib-lab/screed

[metadata]
name = call-tad-cliques
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/robomics/call_tad_cliques
author = Roberto Rossini
author_email = roberros@uio.no
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Windows :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Documentation = https://github.com/robomics/call_tad_cliques
    Source = https://github.com/robomics/call_tad_cliques/wiki
    Tracker = https://github.com/robomics/call_tad_cliques/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    bioframe >= 0.3, < 1
    cooler >= 0.8, < 1
    networkx >= 2.8, < 3
    numpy >= 1.23, < 2
    scipy >= 1.9, < 2
    statsmodels >= 0.13, < 1

python_requires = >=3.8
setup_requires =
    setuptools >= 45
    setuptools_scm >= 6.2
    setuptools_scm_git_archive
    wheel

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    call-cliques = call_tad_cliques.__main__:main

[options.extras_require]
test =
    pytest >= 5.3
all =
    %(test)s